src/objects/Lead_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Some Action</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Downloaded</fullName>
                </value>
                <value>
                    <fullName>Requested Sales Follow-up</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Eloqua_Response_Unique_ID__c</fullName>
        <label>Eloqua Response Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_to_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related to Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Activity(Eloqua)</relationshipLabel>
        <relationshipName>Lead_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response_Date_Created__c</fullName>
        <label>Response Date Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Date_Modified__c</fullName>
        <label>Response Date Modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Specific_Interest_Description__c</fullName>
        <label>Specific Interest Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specific_Interest__c</fullName>
        <label>Specific Interest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Lead Activity</label>
    <nameField>
        <displayFormat>LA-{000000000}</displayFormat>
        <label>Activity Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>